# cis-194

lecture-01/: hsgy-shalamai.cabal
lecture-01/app/: Bloom.hs  TrafficController.hs
lecture-02/app/: Sokoban.hs
lecture-03/: hsgy-shalamai.cabal
lecture-03/app/: Sokoban.hs
lecture-04/: hsgy-shalamai.cabal
lecture-04/app/: Sokoban.hs
lecture-05/: hsgy-shalamai.cabal
lecture-05/app/: Yo.hs
lecture-06/: hsgy-shalamai.cabal
lecture-06/app/: Sokoban.hs
lecture-07/: hsgy-shalamai.cabal
lecture-07/app/: Yo.hs
lecture-08/app/: Yo.hs
lecture-09/: hsgy-shalamai.cabal
lecture-09/app/: Yo.hs
lecture-10/: hsgy-shalamai.cabal
lecture-10/app/: Yo.hs
lecture-11/: hsgy-shalamai.cabal
lecture-11/app/: Yo.hs
lecture-14/app/: Yo.hs
