cabal-version:      2.4
name:               hsgy-shalamai
version:            0.1.0.0

author:             vladyslavsh
maintainer:         vladyslavsh@wix.com

executable hsgy-shalamai
    main-is:          TrafficController.hs

    build-depends:
        base ^>=4.12.0.0,
        codeworld-api ^>=0.6.0

    ghc-options:     -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
