cabal-version:      2.4
name:               hsgy-shalamai
version:            0.1.0.0

author:             vladyslavsh
maintainer:         vladyslavsh@wix.com

executable hsgy-shalamai
    main-is:          Sokoban.hs

    build-depends:
        base ^>=4.12.0.0,
        string-interpolate ^>=0.3.1.0

    ghc-options:     -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
